<resources>
    <string name="a_m">a.m.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
    <string name="accent_color_white">Accent color of white theme</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="add_anniversaries">Add contact anniversaries</string>
    <string name="add_another_attendee">Add another attendee</string>
    <string name="add_another_reminder">Add another reminder</string>
    <string name="add_birthdays">Add contact birthdays</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="add_holidays">Add holidays</string>
    <string name="add_new_sound">Add a new sound</string>
    <string name="add_new_type">Add a new type</string>
    <string name="add_number_to_contact">Add number to contact</string>
    <string name="add_remove_holidays">Add/Remove holidays</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="additional_info">Additional info</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_goes_off_in">"Time remaining till the alarm goes off:
%s"</string>
    <string name="alarm_stream">Alarm</string>
    <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
    <string name="album">Album</string>
    <string name="all_day">All-day</string>
    <string name="allow_changing_time_zones">Allow changing event time zones</string>
    <string name="allow_customizing_day_count">Allow customizing day count</string>
    <string name="altitude">Altitude</string>
    <string name="always">Always</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="anniversaries_added">Anniversaries added successfully</string>
    <string name="apng_text">"Copyright (C) 2019 Zhou Pengfei

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="apng_title">APNG Android (animated WebP support)</string>
    <string name="apng_url">https://github.com/penfeizhou/APNG4Android</string>
    <string name="app_icon_color">App icon color</string>
    <string name="app_icon_color_warning">WARNING: Some launchers do not handle app icon customization properly. In case the icon will disappear, try launching the app via Google Play or some widget, if available. Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
    <string name="app_launcher_name">Calendar</string>
    <string name="app_launcher_short">App Launcher</string>
    <string name="app_long_description">" Simple Calendar Pro is a fully customizable, offline calendar designed to do exactly what a calendar should do. "<b>No complicated features, unnecessary permissions and no ads!</b> Whether you’re organizing single or recurring events, birthdays, anniversaries, business meetings, appointments or anything else, Simple Calendar Pro makes it <b>easy to stay organized</b>. With an incredible variety of <b>customization options</b> you can customize event reminders, notification sounds, calendar widgets and how the app looks. Daily, weekly and monthly views make checking your upcoming events &amp; appointments a breeze. You can even view everything as a simple list of events rather than in calendar view, so you <b>know exactly what’s coming up in your life and when. </b> ---------------------------------------------------------- <b>Simple Calendar Pro – Features &amp; Benefits</b> ---------------------------------------------------------- ✔️ No ads or annoying popups ✔️ No internet access needed, giving you more privacy &amp; security ✔️ Only the bare minimum permissions required ✔️ Emphasis on simplicity – does what a calendar needs to do! ✔️ Open source ✔️ Fully customizable themes &amp; calendar / event widgets ✔️ Translated into 29 languages ✔️ Export settings to .txt files to import to another device ✔️ CalDAV calendar sync supported to sync events across devices ✔️ Daily, weekly, monthly, yearly &amp; event views on the calendar ✔️ Supports exporting &amp; importing events via .ics files ✔️ Set multiple event reminders, customize event reminder sound and vibration ✔️ Snooze option for reminders ✔️ Easily add holidays, birthdays, anniversaries &amp; appointments ✔️ Customize events – start time, duration, reminders etc ✔️ Add event attendees to each event ✔️ Use as a personal calendar or a business calendar ✔️ Choose between reminders &amp; email notifications to alert you about an event DOWNLOAD SIMPLE CALENDAR PRO – THE SIMPLE OFFLINE CALENDAR WITH NO ADS! <b>Check out the full suite of Simple Tools here:</b> https://www.simplemobiletools.com <b>Standalone website of Simple Calendar Pro:</b> https://www.simplemobiletools.com/calendar <b>Facebook:</b> https://www.facebook.com/simplemobiletools <b>Reddit:</b>" https://www.reddit.com/r/SimpleMobileTools "</string>
    <string name="app_name">Calendar</string>
    <string name="app_on_sd_card">"You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won't even see them on the list of available widgets. It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage."</string>
    <string name="app_short_description">Simple mobile 2020 calendar. Schedule planner &amp; appointment reminder for any day</string>
    <string name="app_title">Simple Calendar Pro - Events &amp; Reminders</string>
    <string name="app_version">App version: %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append">"Append with '_1'"</string>
    <string name="append_filenames">Append filenames</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
    <string name="april">April</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
    <string name="artist">Artist</string>
    <string name="ascending">Ascending</string>
    <string name="at_start">At start</string>
    <string name="audio_picker_hint">Tap &amp; hold, or keep D-pad center pressed</string>
    <string name="audio_picker_hint_text">Tap &amp; hold</string>
    <string name="audio_record_view_content_description">Tap &amp; hold to record audio</string>
    <string name="august">August</string>
    <string name="before_asking_question">Before you ask a question, please first read the</string>
    <string name="days_raw">days</string>
    <string name="december">December</string>
    <string name="delete_all_occurrences">Delete all occurrences</string>
    <string name="delete_future_occurrences">Delete this and all future occurrences</string>
    <string name="delete_one_only">Delete the selected occurrence only</string>
    <string name="event_is_repeatable">The event is repeatable</string>
    <string name="february">February</string>
    <string name="follow_us">Follow us</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="friday_letter">F</string>
    <string name="invite_friends_underlined"><u>Invite friends</u></string>
    <string name="january">January</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="march">March</string>
    <string name="may">May</string>
    <string name="monday_letter">M</string>
    <string name="months_raw">months</string>
    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
    <string name="my_email">hello@simplemobiletools.com</string>
    <string name="my_website">"
https://simplemobiletools.com"</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="proceed_with_deletion">Are you sure you want to proceed with the deletion?</string>
    <string name="rate_us_underlined"><u>Rate us</u></string>
    <string name="saturday_letter">S</string>
    <string name="september">September</string>
    <string name="sunday_letter">S</string>
    <string name="third_party_licences_underlined"><u>Third party licences</u></string>
    <string name="thursday_letter">T</string>
    <string name="tuesday_letter">T</string>
    <string name="update_all_occurrences">Update all occurrences</string>
    <string name="update_one_only">Update the selected occurrence only</string>
    <string name="update_this_and_future_occurrences">Update this and all future occurrences</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="wednesday_letter">W</string>
    <string name="weeks_raw">weeks</string>
    <string name="years_raw">years</string>
</resources>