<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/about_scrollview" android:tag="layout/activity_about_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/about_holder" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.simplemobiletools.commons.views.MyTextView android:textColorLink="@color/colorPrimary" android:autoLink="web" android:id="@id/about_website" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/my_website" />
        <com.simplemobiletools.commons.views.MyTextView android:textColorLink="@color/colorPrimary" android:id="@id/about_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/my_email" android:layout_below="@id/about_website" />
        <com.simplemobiletools.commons.views.MyTextView android:id="@id/about_faq_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_margin" android:text="@string/before_asking_question" android:layout_below="@id/about_email" />
        <com.simplemobiletools.commons.views.MyTextView android:textColor="@color/colorPrimary" android:id="@id/about_faq" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frequently_asked_questions" android:layout_below="@id/about_faq_label" />
        <com.simplemobiletools.commons.views.MyTextView android:textColor="@color/colorPrimary" android:id="@id/about_upgrade_to_pro" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/upgrade_to_pro" android:layout_below="@id/about_faq" />
        <com.simplemobiletools.commons.views.MyTextView android:textColor="@color/colorPrimary" android:id="@id/about_more_apps" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/more_apps_from_us_underlined" android:layout_below="@id/about_upgrade_to_pro" />
        <com.simplemobiletools.commons.views.MyTextView android:textColor="@color/colorPrimary" android:id="@id/about_invite" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/invite_friends_underlined" android:layout_below="@id/about_more_apps" />
        <com.simplemobiletools.commons.views.MyTextView android:textColor="@color/colorPrimary" android:id="@id/about_rate_us" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rate_us_underlined" android:layout_below="@id/about_invite" />
        <com.simplemobiletools.commons.views.MyTextView android:textColor="@color/colorPrimary" android:id="@id/about_license" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/third_party_licences_underlined" android:layout_below="@id/about_rate_us" />
        <com.simplemobiletools.commons.views.MyTextView android:id="@id/about_follow_us" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/medium_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/follow_us" android:layout_below="@id/about_license" />
        <ImageView android:id="@id/about_facebook" android:layout_width="@dimen/social_logo" android:layout_height="@dimen/social_logo" android:src="@drawable/ic_facebook_vector" android:layout_below="@id/about_follow_us" />
        <ImageView android:id="@id/about_reddit" android:layout_width="@dimen/social_logo" android:layout_height="@dimen/social_logo" android:layout_marginLeft="@dimen/medium_margin" android:layout_marginRight="@dimen/medium_margin" android:src="@drawable/ic_reddit_vector" android:layout_below="@id/about_follow_us" android:layout_toEndOf="@id/about_facebook" />
        <com.simplemobiletools.commons.views.MyTextView android:gravity="bottom|center" android:id="@id/about_copyright" android:paddingTop="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="v1.0\nCopyright © Simple Mobile Tools 2017" android:layout_below="@id/about_facebook" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</ScrollView>
