<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/delete_event_holder" android:paddingTop="@dimen/big_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/big_margin" android:paddingEnd="@dimen/big_margin"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.simplemobiletools.commons.views.MyTextView android:textSize="@dimen/bigger_text_size" android:id="@id/delete_event_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/proceed_with_deletion" />
    <com.simplemobiletools.commons.views.MyTextView android:textSize="@dimen/normal_text_size" android:id="@id/delete_event_repeat_description" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_margin" android:text="@string/event_is_repeatable" />
    <RadioGroup android:id="@id/delete_event_radio_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/delete_event_one_only" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/delete_one_only" />
        <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/delete_event_future" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_future_occurrences" />
        <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/delete_event_all" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_all_occurrences" />
    </RadioGroup>
</LinearLayout>
