<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/dialog_custom_repeat_interval_scrollview" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_custom_repeat_interval_holder" android:paddingTop="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/activity_margin" android:paddingEnd="@dimen/activity_margin">
        <com.simplemobiletools.commons.views.MyEditText android:textSize="@dimen/normal_text_size" android:id="@id/dialog_custom_repeat_interval_value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="3" android:maxLength="4" android:digits="\ 0123456789" android:inputType="number" android:textCursorDrawable="@null" />
        <RadioGroup android:id="@id/dialog_radio_view" android:paddingTop="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_days" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/days_raw" />
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_weeks" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/weeks_raw" />
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_months" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/months_raw" />
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_years" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/years_raw" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
