<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@id/calendar_holder" android:tag="layout/fragment_year_0" android:padding="@dimen/yearly_padding_side" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableRow android:layout_weight="1.0">
        <RelativeLayout android:id="@id/month_1_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginEnd="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_1_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/january" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/month_1_label" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_2_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_half" android:layout_marginEnd="@dimen/yearly_padding_half">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_2_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/february" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/month_2_label" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_3_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_3_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/march" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/month_3_label" />
        </RelativeLayout>
    </TableRow>
    <TableRow android:layout_weight="1.0">
        <RelativeLayout android:id="@id/month_4_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginEnd="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_4_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/april" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_4" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_4_label" app:days="30" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_5_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_half" android:layout_marginEnd="@dimen/yearly_padding_half">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_5_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/may" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_5" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_5_label" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_6_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_6_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/june" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_6" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_6_label" app:days="30" />
        </RelativeLayout>
    </TableRow>
    <TableRow android:layout_weight="1.0">
        <RelativeLayout android:id="@id/month_7_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginEnd="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_7_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/july" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_7" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_7_label" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_8_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_half" android:layout_marginEnd="@dimen/yearly_padding_half">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_8_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/august" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_8" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_8_label" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_9_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_9_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/september" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_9" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_9_label" app:days="30" />
        </RelativeLayout>
    </TableRow>
    <TableRow android:layout_weight="1.0">
        <RelativeLayout android:id="@id/month_10_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginEnd="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_10_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/october" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_10" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_10_label" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_11_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_half" android:layout_marginEnd="@dimen/yearly_padding_half">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_11_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/november" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_11" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_11_label" android:layout_marginStart="@dimen/yearly_month_padding" app:days="30" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/month_12_holder" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/yearly_padding_full">
            <TextView android:textSize="@dimen/normal_text_size" android:gravity="center_horizontal" android:id="@id/month_12_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/december" android:textAllCaps="true" />
            <com.basicphones.calendar.views.SmallMonthView android:id="@id/month_12" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/month_12_label" />
        </RelativeLayout>
    </TableRow>
</TableLayout>
